# creaturenv

./: .gitignore  README.md  pyproject.toml
creature_env/: __init__.py  creature_builder.py  creature_env.py  lidar.py  renderer.py  test_env.py
envs/: __init__.py
envs/chain_reacher/: __init__.py  chain_reacher_env.py  lidar.py  renderer.py  test_env.py  world_builder.py
envs/swimer/: __init__.py  lidar.py  renderer.py  swimmer_builder.py  swimmer_env.py
examples/: play_ppo.py  train_ppo.py
requirements/: base.txt  rl.txt
tests/: __init__.py  test_env.py  test_reacher.py  test_reward_direction.py  test_swimmer.py
