[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creaturenv"
version = "0.1.0"
description = "Parameterized multi-legged thruster creature Gymnasium Box2D environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "gymnasium>=0.29",
    "Box2D>=2.3.10",
    "pygame>=2.5",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["creature_env*"]

